# QuantumNoiseSimulator

./: CMakeLists.txt  README.md
python/qnoise/: main.py
src/bindings/: pybind_module.cpp
src/core/: constants.hpp  density_matrix.cpp  kraus_channel.hpp
src/core/DensityMatrix/: density_matrix.cpp  density_matrix.hpp
src/core/channels/: amplitude_dampening.cpp  amplitude_dampening.hpp
src/core/channels/AmplitudeDamping/: amplitude_damping.cpp  amplitude_damping.hpp
src/core/channels/BitPhaseFlips/: bit_phase_flips.cpp  bit_phase_flips.hpp
src/core/channels/DepolarizingNoise/: depolarizing_noise.cpp  depolarizing_noise.hpp
src/core/channels/PhaseDamping/: phase_damping.cpp  phase_damping.hpp
src/stateVector/: stateVector.cpp  stateVector.h
tests/cpp/: test_density_matrix.cpp  test_noise_channels.cpp  test_state_vector.cpp
tests/python/: conftest.py
tests/python/validation/: test_single_qubit_channels.py
